--- a/hotel/templates/hotel/base.html
+++ b/hotel/templates/hotel/base.html
@@ -12,6 +12,30 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'hotel/main.css' %}">
 
+    <!-- Favicons -->
+    <!-- ****** faviconit.com favicons ****** -->
+	<link rel="shortcut icon" href="{% static 'hotel/favicon.ico' %}">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="{% static 'hotel/favicon.ico' %}">
+	<link rel="icon" type="image/png" sizes="196x196" href="{% static 'hotel/favicon-192.png' %}">
+	<link rel="icon" type="image/png" sizes="160x160" href="{% static 'hotel/favicon-160.png' %}">
+	<link rel="icon" type="image/png" sizes="96x96" href="{% static 'hotel/favicon-96.png' %}">
+	<link rel="icon" type="image/png" sizes="64x64" href="{% static 'hotel/favicon-64.png' %}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'hotel/favicon-32.png' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'hotel/favicon-16.png' %}">
+	<link rel="apple-touch-icon" href="{% static 'hotel/favicon-57.png' %}">
+	<link rel="apple-touch-icon" sizes="114x114" href="{% static 'hotel/favicon-114.png' %}">
+	<link rel="apple-touch-icon" sizes="72x72" href="{% static 'hotel/favicon-72.png' %}">
+	<link rel="apple-touch-icon" sizes="144x144" href="{% static 'hotel/favicon-144.png' %}">
+	<link rel="apple-touch-icon" sizes="60x60" href="{% static 'hotel/favicon-60.png' %}">
+	<link rel="apple-touch-icon" sizes="120x120" href="{% static 'hotel/favicon-120.png' %}">
+	<link rel="apple-touch-icon" sizes="76x76" href="{% static 'hotel/favicon-76.png' %}">
+	<link rel="apple-touch-icon" sizes="152x152" href="{% static 'hotel/favicon-152.png' %}">
+	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'hotel/favicon-180.png' %}">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="{% static 'hotel/favicon-144.png' %}">
+	<meta name="msapplication-config" content="{% static 'hotel/browserconfig.xml' %}">
+	<!-- ****** faviconit.com favicons ****** -->
+
     <!-- User Checkin -->
     <script type="text/javascript">
     	
